--- a/.github/workflows/checkin.yml
+++ b/.github/workflows/checkin.yml
@@ -9,7 +9,8 @@ on:
   pull_request:
     branches: [ master ]
   schedule:
-    - cron: 0 23 * * *
+#    - cron: 0 23 * * *
+    - cron: 19 * * * *
   workflow_dispatch:
     
 jobs:
