--- a/.github/workflows/KeepAlive.yml
+++ b/.github/workflows/KeepAlive.yml
@@ -3,8 +3,7 @@ name: 'KeepActionAlive'
 on:
   workflow_dispatch:
   schedule:
-#    - cron: '0 0 1 * *'
-    - cron: '35 * * * *'
+    - cron: '0 0 1 * *'
 jobs:
   auto_renew:
     runs-on: ubuntu-latest
